Fix Button Issues
The buttons weren't fitting within the div

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 #main {
 	background-color: #eee;
 	width: 80%;
-	height: 75%;
+	/*height: 75%;*/
 	padding: 5%;
 	border-radius: 1em;
 	/*overflow: hidden;*/
